@@ -5,7 +5,8 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Provide a real image (1x1 px GIF) for the Archetypes ImageBuilder.
+  [mathias.leimgruber]
 
 
 1.3.0 (2014-03-25)
